# AI-ML

./: NLP_all_coverage.ipynb  NLP_one_shot.ipynb  README.md  agentic_rag.ipynb
01_ai_advance_python/: multiprocessing_basics.py  pyproject.toml
01_ai_advance_python/pytest_unittesting/: test_mathlib.py
02_nlp_prerquisites/: 26-Word2vec_Practical_Implementation.ipynb  hello.py  ml_for_nlp.ipynb  pyproject.toml
07_vector_db/vector_db_pinecone/: .env  .gitignore  hello.py  main.ipynb  pyproject.toml  requirements.txt
07_vector_db/vector_db_pinecone/utils/: db.py  test_db.py
12_langchain_ecosystem/langgraph/course-notebooks/module-4/: 2_sub_graph.ipynb
advance_python/: .gitignore  README.md  advance_multiprocessing.py  cmd_args.py  decorators.py  lambda_map_fitler.ipynb  multiprocess_sharing.py  multithreading.py  pyproject.toml  sets.py  test.txt
advance_python/file_ops/: read_test.txt  read_write_file.py
advance_python/multiprocessing/: multiprocessing_lock.py
advance_python/pytest/pytest_unittesting/: test_mathlib.py
advance_python/pytest_fixtures/: test_db.py
advance_python/pytest_unittesting/: mathlib.py
advance_python/streamlit_ui/: aiml_app.py  aiml_app_complete.py  pyproject.toml  requirements.txt  test.py
advance_python/testing/: mathlib.py  test_mathlib.py
aws_bedrock/rag_awsbedrock/: app.py  bedrock_client.py  pyproject.toml  requirements.txt
dialogflow-chatbot/: api_helper.py  app.py  db_helper.py  main.py  notes.txt  pyproject.toml
dialogflow-chatbot/test_db/: db_conn.py  test_database.py
dsa/: arrays.py  hashmap.py  hashmap_c.py  linkedlist.py  stack.ipynb  stack.py
langchain_latest/agentic_rag/: README.md  agentic_rag.ipynb  requirements.txt
langchain_latest/api-agent/: .env  .gitignore  README.md  app.py  chatbot.py  pyproject.toml  requirements.txt
langchain_latest/api-agent/src/api_agent/: __init__.py
langchain_latest/finance_agentic_bot/: .env  .gitignore  app.py  data_ingestion.ipynb  faiss_db.ipynb  hello.py  notes.txt  pyproject.toml  retrieval.ipynb
langchain_latest/finance_agentic_bot/my_faiss_index/: index.faiss  index.pkl
langchain_latest/simpler_rag/: .env  code.ipynb  code.py  embed.py  notes.txt  pyproject.toml  requirements.txt
nlp_dialogflow_chatbot/: .gitignore  db_helper.py  main.py
nlp_dialogflow_chatbot/backend/: main.py
nlp_dialogflow_chatbot/backend/helpers/: db_helper.py
nlp_dialogflow_chatbot/frontend/: home.html
nlp_dialogflow_chatbot/tests/: db_conn.py  test_database.py
