[project]
name = "api-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sufyan Ahmed", email = "muhammadsufyan20@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "langchain>=0.3.20",
    "langchain-anthropic>=0.3.9",
    "langchain-community>=0.3.19",
    "langchain-google-genai>=2.0.11",
    "langserve>=0.3.1",
    "python-dotenv>=1.0.1",
    "sse-starlette>=2.2.1",
    "streamlit>=1.43.1",
    "uvicorn>=0.34.0",
]

[project.scripts]
api-agent = "api_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
