[project]
name = "finance-agentic-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain>=0.3.23",
    "langchain-community>=0.3.21",
    "langchain-google-genai>=2.1.3",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=0.3.8",
    "libmagic>=1.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.14",
    "streamlit>=1.44.1",
    "unstructured>=0.17.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
