[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sufyan Ahmed", email = "muhammadsufyan20@gmail.com" }
]
requires-python = ">=3.12"
dependencies = 
    "bs4>=0.0.2",
    "langchain>=0.3.21",
    "langchain-community>=0.3.20",
    "langchain-google-genai>=2.1.2",
    "langchain-google-vertexai>=2.0.18",
    "pypdf>=5.4.0",


[project.scripts]
rag = "rag:code"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
